--- a/Homework_3.ipynb
+++ b/Homework_3.ipynb
@@ -46,15 +46,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Поисковых запросов, содержащих 2 слов(а) : 42.86  %\n",
-      "Поисковых запросов, содержащих 3 слов(а) : 57.14  %\n"
+      "Поисковых запросов, содержащих 3 слов(а): 57.14  %\n",
+      "Поисковых запросов, содержащих 2 слов(а): 42.86  %\n"
      ]
     }
    ],
@@ -81,17 +81,15 @@
     "for i in data_set:\n",
     "    for j in i:\n",
     "        data_set_2.append(j.split(' '))\n",
-    "    \n",
-    "two_words = 0\n",
-    "three_words = 0\n",
-    "for element in data_set_2:\n",
-    "    if len(element) == 2:\n",
-    "        two_words += 1\n",
-    "    else:\n",
-    "        three_words += 1\n",
+    "        \n",
+    "dict_set = {}\n",
+    "for i in data_set_2:\n",
+    "    words_count = len(i)\n",
+    "    dict_set.setdefault(words_count, 0)\n",
+    "    dict_set[words_count] += 1\n",
     "\n",
-    "print('Поисковых запросов, содержащих 2 слов(а) :', round(float(two_words) / float(total) * 100, 2), ' %')\n",
-    "print('Поисковых запросов, содержащих 3 слов(а) :', round(float(three_words) / float(total) * 100, 2), ' %')"
+    "for key, value in dict_set.items():\n",
+    "    print('Поисковых запросов, содержащих', key, 'слов(а):', round(float(value) / float(total) * 100, 2), ' %')"
    ]
   },
   {
